--- a/ch1_Basics_of_Modelling/Open_and_Closed_Loop_Control.tex
+++ b/ch1_Basics_of_Modelling/Open_and_Closed_Loop_Control.tex
@@ -9,5 +9,6 @@
 	
 	It might seem like this would be a really bad control system. After all, it can't take into account disturbances to the state of the system and has no way of addressing drift of the system. However, if the system is well understood and the controller is calibrated to the specifics of the system, results can be pretty decent. For example, stepper motors rotate in discrete steps, so a controller can simply count the steps it bade the motor to take. This gives it confidence in the motor's position and velocity despite not having feedback on it. Another example of a partial open loop is a water heater which only heats a reservoir and does not monitor the temperature of the outflow where it is used. If the heat losses from reservoir are well understood, the controller can have a good guess at what the reservoir temperature needs to be for the actual temperature of the outflow to be as desired.
 \end{section}
-
+\begin{section}{Closed Loop Control}
+	In contrast, Closed Loop Control systems have a mechanism for feedback. This gives a mechanism to communicate unanticipated error back to the controller. Unanticipated error includes disturbances to the system, system drift, miscalibration, and linearisation errors, among others.
 \end{document}
