Add laplace transform symbols

--- a/templates/topic.cls
+++ b/templates/topic.cls
@@ -6,6 +6,12 @@
 \LoadClass{article}
 
 \usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage[framed & numbered & autolinebreaks & useliterate]{mcode}
+
+% Math Symbols
+
+\def\laplace{L\mathclap{\rightarrow}\ }
+\def\ilaplace{L\mathllap{\leftarrow}\ }
 
 \endinput
