Added some more frequently used forms

--- a/ch1_Basics_of_Modelling/Block_Diagrams.tex
+++ b/ch1_Basics_of_Modelling/Block_Diagrams.tex
@@ -74,10 +74,10 @@ The reciprocal of the Function must be applied to keep the signal equivalent.
 A Feedback Loop can be reduced to the combined transfer function:
 
 \begin{equation}
-	\frac{G}{1+GH}
+	\frac{G}{1+GH} = \frac{1}{1/G+H}
 \end{equation}
 
-This assumes a negative feedback loop.
+These assumes a negative feedback loop.
 
 \section{Converting Models}
 
