--- a/ch2_Transfer_Functions/Inverse_Laplace_Transform.tex
+++ b/ch2_Transfer_Functions/Inverse_Laplace_Transform.tex
@@ -32,11 +32,15 @@
 			\hline
 		$\frac{n!}{s^{n+1}}$ & $t^n$ \\
 			\hline
+		$\frac{1}{(s+a)^2}$ & $t*e^{-at}$ \\
+			\hline
 		$1$ & $\impulse$ \\
 			\hline
 		$\frac{\omega}{(s+a)^2+\omega^2}$ & $e^{-at}*\sin{(\omega t)}$ \\
 			\hline
 		$\frac{(s+a)}{(s+a)^2+\omega^2}$ & $e^{-at}*\cos{(\omega t)}$ \\
+			\hline
+		$\frac{1}{(1+a_1s)(1+a_2s)}$ & $\frac{e^{-s/a_1}-e^{-s/a_2}}{a_1-a_2}$ \\
 			\hline
 		$\frac{s+b}{(s+a)^2+\omega^2}$ & $\frac{1}{\omega}\sqrt{(b-a)^2+\omega^2} e^{-at}*\sin{(\omega t+\arctan(\frac{\omega}{b-a}))}$ \\
 			\hline
