Added reference for where Signal Flow Graphs

--- a/ch1_Basics_of_Modelling/Signal_Flow_Graphs.tex
+++ b/ch1_Basics_of_Modelling/Signal_Flow_Graphs.tex
@@ -79,6 +79,12 @@
 	
 \end{section}
 
-
+\begin{section}{References}
+	\begin{itemize}
+		\item Modern Control Engineering, Ogata. 4th edition. It seems that this information is not present in the 3rd or 5th editions of the textbook. Go figure. You can check out pages 106-112 for the information.
+		\item The Wikibook on the subject has a nice worked-through example. Give it a look: https://en.wikibooks.org/wiki/Control_Systems/Signal_Flow_Diagrams#Signal-flow_graphs
+	\end{itemize}
+	
+\end{section}
 
 \end{document}
