Add characteristic equation

--- a/ch2b_State_Space_Representation/State_Space_Representation.tex
+++ b/ch2b_State_Space_Representation/State_Space_Representation.tex
@@ -10,6 +10,13 @@
 	% TODO: State_Space_Representation::Definition
 \end{section}
 
+\begin{section}{Characteristic Equation}
+	The Characteristic Eqquation is the denominator of the TF and is given by
+	\begin{equation}
+		DET[s\vec1-A]
+	\end{equation}
+\end{section}
+
 \begin{section}{State Transition Matrix}
 	The STM is given as
 	\begin{equation}
