Retool templates for bookifying

--- a/templates/mathtool.cls
+++ b/templates/mathtool.cls
@@ -1,7 +1,7 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesClass{lilatomic-mathtool}[Class for the mathtool type of topic Lilatomic uses]
 
-\DeclareOption*{\PassOptionsToClass{\CurrentOption}{../templates/topictopic}}
+\DeclareOption*{\PassOptionsToClass{\CurrentOption}{../templates/topic}}
 \ProcessOptions
 \LoadClass{../templates/topic}
 
