Retool documents for integration into main.tex

--- a/ch1_Basics_of_Modelling/Block_Diagrams.tex
+++ b/ch1_Basics_of_Modelling/Block_Diagrams.tex
@@ -1,11 +1,9 @@
 \documentclass{../templates/topic}
 
-\title{1:Block Diagrams}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
 
-\maketitle
+\chapter{Block Diagrams}
+
 \section{Definition}
 There are several basic elements in a block diagram:
 
@@ -91,4 +89,4 @@ The easiest way to convert a physical model to a block diagram is:
 \end{enumerate}
 
 
-\end{document}_
+\end{document}
