--- a/ch1_Basics_of_Modelling/Open_and_Closed_Loop_Control.tex
+++ b/ch1_Basics_of_Modelling/Open_and_Closed_Loop_Control.tex
@@ -1,9 +1,8 @@
 \documentclass{../templates/topic}
 
-\title{Open and Closed Loop Control}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
+\chapter{Open and Closed Loop Control}
+
 \begin{section}{Open Loop Control}
 	Open Loop Control systems do not feed the information of the process results back to the controller. That is to say the actual result does not influence the action taken by the controller.
 	
