--- a/ch2a_Transfer_Functions/Inverse_Laplace_Transform.tex
+++ b/ch2a_Transfer_Functions/Inverse_Laplace_Transform.tex
@@ -1,10 +1,8 @@
 \documentclass{../templates/mathtool}
 
-\title{Inverse Laplace Transform}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+
+\chapter{Inverse Laplace Transform}
 
 \begin{section}{Definition}
 	The mathematical definition of the $\ilaplace$ is
