--- a/ch2a_Transfer_Functions/Laplace_Transforms.tex
+++ b/ch2a_Transfer_Functions/Laplace_Transforms.tex
@@ -1,11 +1,8 @@
 \documentclass{../templates/mathtool}
 
-\title{Laplace Transforms}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
 
-\maketitle
+\chapter{Laplace Transforms}
 
 \begin{section}{Definition}
 	
