--- a/ch2a_Transfer_Functions/Masons_gain_rule.tex
+++ b/ch2a_Transfer_Functions/Masons_gain_rule.tex
@@ -1,10 +1,7 @@
 \documentclass{../templates/topic}
 
-\title{Mason's Gain Rule}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{Mason's Gain Rule}
 
 \begin{section}{Definition}
 	
