--- a/ch2a_Transfer_Functions/Partial_Fraction_Decomposition.tex
+++ b/ch2a_Transfer_Functions/Partial_Fraction_Decomposition.tex
@@ -1,12 +1,9 @@
 \documentclass{../templates/topic}
 
-\usepackage{xcolor}
-
-\title{Partial Fraction Decomposition}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+
+\chapter{Partial Fraction Decomposition}
+
 
 \begin{section}{Definition}
 	% TODO: add section Partial Fraction Decomposition::Definition
