--- a/ch2a_Transfer_Functions/State_Space_to_Transfer_Function.tex
+++ b/ch2a_Transfer_Functions/State_Space_to_Transfer_Function.tex
@@ -1,10 +1,7 @@
 \documentclass{../templates/topic}
 
-\title{State Space to Transfer Function}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{State Space to Transfer Function}
 
 \begin{section}{Definition}
 	The TF can be derived simply with the application of the formula
