--- a/ch2a_Transfer_Functions/Transfer_Functions.tex
+++ b/ch2a_Transfer_Functions/Transfer_Functions.tex
@@ -1,11 +1,8 @@
 \documentclass{../templates/topic}
 
-\title{Transfer Functions}
-\author{Daniel "lilatomic" Goldman}
-
-\maketitle
-
 \begin{document}
+
+\chapter{Transfer Functions}
 
 \begin{section}{Definition}
 	The transfer function is defined as:
