--- a/ch2b_State_Space_Representation/Principal_Coordinates.tex
+++ b/ch2b_State_Space_Representation/Principal_Coordinates.tex
@@ -1,10 +1,9 @@
 \documentclass{../templates/topic}
 
-\title{Principal Coordinates}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+
+\chapter{Principal Coordinates}
+
 \begin{section}{Utility}
 	This decouples the equations, which makes manipulating them mathematically much easier.
 \end{section}
