--- a/ch2b_State_Space_Representation/Solution_of_State_Space_Problems.tex
+++ b/ch2b_State_Space_Representation/Solution_of_State_Space_Problems.tex
@@ -1,10 +1,7 @@
 \documentclass{../templates/topic}
 
-\title{Solution of State Space Problems}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{Solution of State Space Problems}
 
 \begin{section}{Zero Input Solution}
 	
