--- a/ch2b_State_Space_Representation/State_Space_Representation.tex
+++ b/ch2b_State_Space_Representation/State_Space_Representation.tex
@@ -1,10 +1,7 @@
 \documentclass{../templates/topic}
 
-\title{State Space Representation}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{State Space Representation}
 
 \begin{section}{Definition}
 	% TODO: State_Space_Representation::Definition
