--- a/ch2b_State_Space_Representation/Transfer_Function_to_State_Space.tex
+++ b/ch2b_State_Space_Representation/Transfer_Function_to_State_Space.tex
@@ -1,10 +1,7 @@
 \documentclass{../templates/topic}
 
-\title{Transfer Function to State Space}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{Transfer Function to State Space}
 
 \begin{section}{Strictly Proper}
 	
