--- a/ch0_Background_Refresher/Inverting_Matrices.tex
+++ b/ch0_Background_Refresher/Inverting_Matrices.tex
@@ -1,10 +1,8 @@
 \documentclass{../templates/mathtool}
 
-\title{Inverting Matrices}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+
+\chapter{Inverting Matrices}
 
 \begin{section}{2x2}
 	\[ INV
