--- a/ch1_Basics_of_Modelling/Signal_Flow_Graphs.tex
+++ b/ch1_Basics_of_Modelling/Signal_Flow_Graphs.tex
@@ -1,10 +1,8 @@
 \documentclass{../templates/topic}
 
-\title{Signal Flow Graphs}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{Signal Flow Graphs}
+
 
 \begin{section}{Definitions}
 	Mixed node: A node with incoming and outgoing branches
@@ -82,7 +80,7 @@
 \begin{section}{References}
 	\begin{itemize}
 		\item Modern Control Engineering, Ogata. 4th edition. It seems that this information is not present in the 3rd or 5th editions of the textbook. Go figure. You can check out pages 106-112 for the information.
-		\item The Wikibook on the subject has a nice worked-through example. Give it a look: https://en.wikibooks.org/wiki/Control_Systems/Signal_Flow_Diagrams#Signal-flow_graphs
+		\item The Wikibook on the subject has a nice worked-through example. Give it a look: https://en.wikibooks.org/wiki/Control\_Systems/Signal\_Flow\_Diagrams\#Signal-flow\_graphs
 	\end{itemize}
 	
 \end{section}
