--- a/ch2b_State_Space_Representation/Block_Diagram_to_State_Space.tex
+++ b/ch2b_State_Space_Representation/Block_Diagram_to_State_Space.tex
@@ -1,10 +1,8 @@
 \documentclass{../templates/topic}
 
-\title{Block Diagram to State Space}
-\author{Daniel "lilatomic" Goldman}
-
 \begin{document}
-\maketitle
+\chapter{Block Diagram to State Space}
+
 
 \begin{section}{Steps}
 	
