Add formulae for complex number representations

--- a/main.tex
+++ b/main.tex
@@ -10,6 +10,7 @@
 
 \part*{0 Background Refresher}
 \subfile{ch0_Background_Refresher/Inverting_Matrices.tex}
+\subfile{ch0_Background_Refresher/Complex_Numbers.tex}
 
 \part*{1 Basics of Modelling}
 \subfile{ch1_Basics_of_Modelling/Open_and_Closed_Loop_Control.tex}
