--- a/ch2a_Transfer_Functions/Partial_Fraction_Decomposition.tex
+++ b/ch2a_Transfer_Functions/Partial_Fraction_Decomposition.tex
@@ -29,7 +29,15 @@
 	\end{subsection}
 	
 	\begin{subsection}{Repeated Factor}
-		% TODO: Add subsection: Partial Fraction Decomposition::Repeated Factor
+		If a repeated factor appears in the denominator, the partial fraction decomposition needs to contain increasing powers of the factor (up to the power of the root).
+		\begin{equation*}
+			\frac{U}{(s+1)^3}=\frac{A}{(s+1)}+\frac{B}{(s+1)^2}+\frac{C}{(s+1)^3}
+		\end{equation*}
+		Note that instead of that, you can have a numerator of higher order.
+		\begin{equation*}
+			\frac{U}{s(s^2+1)}=\frac{As+B}{s^2+1}+\frac{C}{s}
+		\end{equation*}
+		
 	\end{subsection}
 	\begin{subsection}{Improper Fraction}
 		A fraction is improper when the degree of the numerator is not less than the degree of the denominator. The degree of mismatch is the difference between the former and the latter.
