Add free and forced response

--- a/main.tex
+++ b/main.tex
@@ -33,4 +33,7 @@
 \subfile{ch2b_State_Space_Representation/Principal_Coordinates.tex}
 \subfile{ch2b_State_Space_Representation/Transfer_Function_to_State_Space.tex}
 
+\part*{3 Time Domain Performance Characteristics}
+\subfile{ch3_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex}
+
 \end{document}
