--- a/ch3_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex
+++ b/ch3_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex
@@ -4,9 +4,9 @@
 \chapter{Free and Forced Response}
 
 \begin{section}{Definition}
-	The free response of a system is the response to the initial conditions, with no forcing functions.
+	\definition{Free Response} The free response of a system is the response to the initial conditions, with no forcing functions.
 	
-	The forced response of a system is the response to the forcing function with 0 initial conditions.
+	\definition{Forced Response} The forced response of a system is the response to the forcing function with 0 initial conditions.
 	
 \end{section}
 
