add formula definitions for elements of the canonical representation

--- a/ch1_Basics_of_Modelling/Canonical_Form_2nd_Order.tex
+++ b/ch1_Basics_of_Modelling/Canonical_Form_2nd_Order.tex
@@ -24,6 +24,23 @@
 	
 \end{section}
 
+\begin{section}{Element Definitions}
+	\definition{$\omega_n$} The natural frequency
+	
+	\definition{$\omega_d$} $\omega_d=\omega_n\sqrt{1-\zeta^2}$
+	
+	\definition{$\zeta$} The damping coefficient. Indicates the strength of the damping of the system.
+	\begin{equation*}
+		\begin{cases}
+			\zeta \in (0,1) & subcritically damped \\
+			\zeta = 1 & critically damped \\
+			\zeta > 1 & supercritically damped
+		\end{cases}
+	\end{equation*}
+	
+	\definition{$\sigma$} $\zeta\omega_n$
+\end{section}
+
 \begin{section}{Application}
 	% TODO: Canonical_Form_2nd_Order::Application_zeta
 	% TODO: Canonical_Form_2nd_Order::Application_omegan
