--- a/ch3_Time_Domain_Performance_Characteristics/The_Complex_Plane.tex
+++ b/ch3_Time_Domain_Performance_Characteristics/The_Complex_Plane.tex
@@ -1,6 +1,8 @@
 \documentclass{../templates/topic}
 
 \begin{document}
+\graphicspath{{assets/}{ch3_Time_Domain_Performance_Characteristics/assets/}}
+
 \chapter{The Complex Plane}
 
 \begin{section}{Defintion}
@@ -23,22 +25,22 @@
 		\centering
 		
 		\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{assets/complex_plane_convergence.png}
+		\includegraphics[width=\textwidth]{complex_plane_convergence.png}
 		\caption{Quicker Convergence}
 		\end{subfigure}
 		% This line necessary
 		\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{assets/complex_plane_overshoot.png}
+		\includegraphics[width=\textwidth]{complex_plane_overshoot.png}
 		\caption{Less Overshoot}
 		\end{subfigure}
 		\\
 		\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{assets/complex_plane_rise.png}
+		\includegraphics[width=\textwidth]{complex_plane_rise.png}
 		\caption{Shorter Rise (radial)}
 		\end{subfigure}
 		% This line necessary
 		\begin{subfigure}[b]{0.4\textwidth}
-		\includegraphics[width=\textwidth]{assets/complex_plane_peak.png}
+		\includegraphics[width=\textwidth]{complex_plane_peak.png}
 		\caption{Shorter Peak}
 		\end{subfigure}
 
