--- a/ch3_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
+++ b/ch3_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
@@ -1,7 +1,10 @@
 \documentclass{../templates/topic}
 
 \begin{document}
+\graphicspath{{assets/}{ch3_Time_Domain_Performance_Characteristics/assets/}}
+
 \chapter{Transient Response Characteristics}
+
 \begin{section}{Definitions}
 	
 	All of these refer in general to the Unit Step Response.
@@ -15,7 +18,7 @@
 	\definition{overshoot $ \approx \exp[\frac{-\pi\zeta}{\sqrt{1-\zeta^2}}] $} ratio of the height of the 1st peak above the final value to the final value.
 	
 	\begin{figure}[H]
-		\includegraphics[width=\textwidth]{assets/characteristics_on_graph.png}
+		\includegraphics[width=\textwidth]{characteristics_on_graph.png}
 		\caption{Time Response Characteristics on a sample function}
 	\end{figure}
 	
