--- a/main.tex
+++ b/main.tex
@@ -35,5 +35,7 @@
 
 \part*{3 Time Domain Performance Characteristics}
 \subfile{ch3_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex}
+\subfile{ch3_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex}
+\subfile{ch3_Time_Domain_Performance_Characteristics/The_Complex_Plane.tex}
 
 \end{document}
