added handy feedback rule shortcut

--- a/ch1_Basics_of_Modelling/Block_Diagrams.tex
+++ b/ch1_Basics_of_Modelling/Block_Diagrams.tex
@@ -77,6 +77,12 @@ A Feedback Loop can be reduced to the combined transfer function:
 
 These assumes a negative feedback loop.
 
+For $*_n$ as the numerator and $*_d$ as the denominator, this quickly simplifies to
+
+\begin{equation}
+	\frac{G_n\cdot H_d}{G_n\cdot H_n + G_d\cdot H_d}
+\end{equation}
+
 \section{Converting Models}
 
 The easiest way to convert a physical model to a block diagram is:
