--- a/main.tex
+++ b/main.tex
@@ -33,9 +33,9 @@
 \subfile{ch2b_State_Space_Representation/Block_Diagram_to_State_Space.tex}
 \subfile{ch2b_State_Space_Representation/Transfer_Function_to_State_Space.tex}
 
-\part*{3 Time Domain Performance Characteristics}
-\subfile{ch3_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex}
-\subfile{ch3_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex}
-\subfile{ch3_Time_Domain_Performance_Characteristics/The_Complex_Plane.tex}
+\part*{3a Time Domain Performance Characteristics}
+\subfile{ch3a_Time_Domain_Performance_Characteristics/Free_and_Forced_Response.tex}
+\subfile{ch3a_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex}
+\subfile{ch3a_Time_Domain_Performance_Characteristics/The_Complex_Plane.tex}
 
 \end{document}
