clarify overshoot for overdamped systems

--- a/ch3a_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
+++ b/ch3a_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
@@ -15,7 +15,7 @@
 	
 	\definition{settling time $\approx \frac{4}{\zeta\omega_n} (for 0.02)$}  time before the system has converged to within a specified percentage of the final value.
 	
-	\definition{overshoot $ \approx \exp[\frac{-\pi\zeta}{\sqrt{1-\zeta^2}}] $} ratio of the height of the 1st peak above the final value to the final value.
+	\definition{overshoot $ \approx \exp[\frac{-\pi\zeta}{\sqrt{1-\zeta^2}}] $} ratio of the height of the 1st peak above the final value to the final value. Note that for overdamped systems, which begin with movement away from the final value, the overshoot can be considered the ratio of the height of that trough.
 	
 	\begin{figure}[H]
 		\includegraphics[width=\textwidth]{characteristics_on_graph.png}
