--- a/ch4a_Electrical_Systems/Electrical_Systems.tex
+++ b/ch4a_Electrical_Systems/Electrical_Systems.tex
@@ -22,13 +22,13 @@
 
 \begin{section}{Elements}
 	\begin{itemize}
-		\item Resistor
-		\item Capacitor
-		\item Inductor
-		\item Voltage Generator
-		\item Current Generator
-		\item Transformer
-		\item Gyrator
+		\item Resistor : $Z=R$
+		\item Capacitor : $Z=\frac{1}{j\omega C}$
+		\item Inductor : $Z=j\omega L$
+		\item Voltage Generator : Supplies constant potential difference regardless of flux $Z=0$
+		\item Current Generator : Supplies constant flux regardless of potential difference $Z=\infty$
+		\item Transformer : $e_2 = ne_1$; $i_2 = \frac{1}{n}i_1$
+		\item Gyrator : Interchange potential and flux. It is most useful conceptually, as it allows different models to be bridged. 
 	\end{itemize}
 \end{section}
 
