Clarify applicability of design guidelines

--- a/ch3a_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
+++ b/ch3a_Time_Domain_Performance_Characteristics/Transient_Response_Characteristics.tex
@@ -24,11 +24,15 @@
 	
 \end{section}
 
-\begin{section}{Designing for Characteristics}
+\begin{section}{2nd Order Underdamped Systems}
+	
+	\begin{subsection}{Designing for Characteristics}
 	\subsection{Overshoot}
 		\begin{equation*}
 			\zeta = \sqrt{\frac{(\ln{M_p})^2}{\pi^2+(\ln{M_p})^2}}
 		\end{equation*}
+		
+	\end{subsection}
 	
 \end{section}
 
