Clarify role of Eelectrical System analogs

--- a/ch4_System Modelling/Electrical_Systems.tex
+++ b/ch4_System Modelling/Electrical_Systems.tex
@@ -43,6 +43,8 @@
 
 \begin{section}{The Universal Analogy}
 	Electrical systems will often be used as an intermediate model when analysing other systems. These systems have the Voltage and Current laws easily formulated, making analysis more straightforward.
+	
+	As well, in the case where there are multiple types of systems being modelled, you'll need to put them all in the same form. (Unless you're using block diagrams directly, I guess.) Why not make it the Electrical Form?
 		
 \end{section}
 
