Add nonstandard mechanical elements

--- a/ch4_System Modelling/Mechanical_Analogs.tex
+++ b/ch4_System Modelling/Mechanical_Analogs.tex
@@ -20,6 +20,12 @@
 			\item Force : Voltage source, from ground
 			\item Velocity Generator : Current source, from ground
 		\end{itemize}
+		
+		Other Elements
+		\begin{itemize}
+			\item Lever : A transformer (constant $length_a : length_b$)
+			\item Gear Train : A transformer (constant $n_a : n_b$)
+		\end{itemize}
 
 	\subsection{Mobility Analog}
 		The Mobility Analog defines
@@ -35,6 +41,12 @@
 			\item Damper/friction : Resistor, with compliance $r = 1/R$
 			\item Force Generator : Current source, from ground
 			\item Velocity Generator : Voltage source, from ground
+		\end{itemize}
+		
+		Other Elements
+		\begin{itemize}
+			\item Lever : A transformer (constant $length_a$ to $length_b$)
+			\item Gear Train : A transformer (constant $n_b : n_a$)
 		\end{itemize}
 		
 	\subsection{Equivalence of Analogs}
